# oil_project

connectors/: actionrecord.json  controller.json  mandrel.json  statusalarm.json  well.json
iot_project/: CMakeLists.txt  README.md
iot_project/backend/: CMakeLists.txt  backend.cpp  backend.h  main.cpp
iot_project/database/: CMakeLists.txt  actionrecord.cpp  actionrecord.h  controller.cpp  controller.h  controllerrecord.cpp  controllerrecord.h  database.cpp  database.h  mandrel.cpp  mandrel.h  mandrelrecord.cpp  mandrelrecord.h  status_alarm.cpp  status_alarm.h  user.cpp  user.h  useraction.cpp  useraction.h  well.cpp  well.h  wellrecord.cpp  wellrecord.h
iot_project/doc/: frontend.desktop  oil_edge.sql  环境安装.md
iot_project/frontend/: CMakeLists.txt  login.cpp  login.h  login.ui  main.cpp  package_process.cpp  package_process.h  register_info.cpp  register_info.h  register_info.ui  uidemo08.cpp  uidemo08.h  uidemo08.pro  uidemo08.pro.user.68a226f  uidemo08.pro.user.8a81c30  uidemo08.pro.user.8e9b2eb  uidemo08.pro.user.9cb702b  uidemo08.ui
iot_project/frontend/qss/: psblack.css
iot_project/frontend/resources/: oil_cloud.sql  oil_edge.sql
iot_project/kafka/: AuthenConsumer.cpp  AuthenConsumer.h  AuthenProducer.cpp  AuthenProducer.h  CMakeLists.txt  KafkaConsumer.cpp  KafkaConsumer.h  KafkaProducer.cpp  KafkaProducer.h  cryptmsg.cpp  cryptmsg.h  monitortimer.cpp  monitortimer.h  mytimer.cpp  mytimer.h  sync_cloud_msg.cpp  sync_cloud_msg.h
iot_project/test/: CMakeLists.txt  client  client.cpp  comsumer_test.cpp  main.cpp  ping.cpp  ping.h  pingtest.cpp  pro.cpp  producer_test.cpp  server.cpp  servers  servers.cpp  test.cpp  test_actionrecord_json.cpp  test_convert.cpp  test_data_storage.cpp  test_json.cpp  test_mandrel_json.cpp  test_serial.cpp  test_statusalarm_json.cpp  test_string.cpp  test_well_json.cpp  testcrpt.cpp  testfloat.cpp  testproducer.cpp  testtimer.cpp
iot_project/util/: CMakeLists.txt  buffer_queue.cpp  buffer_queue.h  dealpk.cpp  dealpk.h  device_status.cpp  device_status.h  edge_communication.cpp  edge_communication.h  error_no.h  intreadwrite.h  package.cpp  package.h  ping.cpp  ping.h  util.cpp  util.h  variables.cpp  variables.h
kafka/config/: connect-distributed.properties  connect-mirror-maker.properties  mm.properties  server.properties
kafka/site-docs/: kafka_2.13-3.0.2-site-docs.tgz
zookeeper/conf/: zoo.cfg
zookeeper/logs/: zookeeper-nvidia-server-nx.out
