cmake_minimum_required(VERSION 2.8)

project(test)

set(BUILD_ITEMS "${BUILD_ITEMS} test" CACHE INTERNAL "all items to build")
set(EXAMPLE_EXECUTE_NAME converttest)
add_executable(${EXAMPLE_EXECUTE_NAME} testtimer.cpp)
target_link_libraries(${EXAMPLE_EXECUTE_NAME} util)
target_link_libraries(${EXAMPLE_EXECUTE_NAME} kafka)

# set(BUILD_ITEMS "${BUILD_ITEMS} spdlog_test" CACHE INTERNAL "all items to build")
# set(EXAMPLE_EXECUTE_NAME spdlog_test)
# add_executable(${EXAMPLE_EXECUTE_NAME} spdlog_multithread_test.cpp)

# set(BUILD_ITEMS "${BUILD_ITEMS} get_information_test" CACHE INTERNAL "all items to build")
# set(EXAMPLE_EXECUTE_NAME get_information_test)
# add_executable(${EXAMPLE_EXECUTE_NAME} get_information_test.cpp)
# target_link_libraries(${EXAMPLE_EXECUTE_NAME} util)
# target_link_libraries(${EXAMPLE_EXECUTE_NAME} mesh)
# target_link_libraries(${EXAMPLE_EXECUTE_NAME} lte)
# target_link_libraries(${EXAMPLE_EXECUTE_NAME} media)

# if(${IS_BASE_STATION})
#     set(BUILD_ITEMS "${BUILD_ITEMS} mesh_recv_image" CACHE INTERNAL "all items to build")
#     set(EXAMPLE_EXECUTE_NAME mesh_recv_image)
#     add_executable(${EXAMPLE_EXECUTE_NAME} mesh_recv_image_test.cpp)
# else()
#     set(BUILD_ITEMS "${BUILD_ITEMS} mesh_send_image" CACHE INTERNAL "all items to build")
#     set(EXAMPLE_EXECUTE_NAME mesh_send_image)
#     add_executable(${EXAMPLE_EXECUTE_NAME} mesh_send_image_test.cpp)
# endif()
# target_link_libraries(${EXAMPLE_EXECUTE_NAME} ${OpenCV_LIBS})
# target_link_libraries(${EXAMPLE_EXECUTE_NAME} util)
# target_link_libraries(${EXAMPLE_EXECUTE_NAME} mesh)
# target_link_libraries(${EXAMPLE_EXECUTE_NAME} lte)
# target_link_libraries(${EXAMPLE_EXECUTE_NAME} media)
